--- a/index.html
+++ b/index.html
@@ -18,5 +18,28 @@
     <link rel="stylesheet" href="style.css" />
     <style src="main.js" difer></style>
   </head>
-  <body></body>
+  <body>
+    <!-- Navigation bar -->
+    <nav id="nav bar">
+      <div class="navbar__logo">
+        <i class="logo"></i>
+        <a href="#">JUSEOK</a>
+      </div>
+      <div class="">
+        <ul class="navbar__menu">
+          <li class="navbar__menu__item">Home</li>
+          <li class="navbar__menu__item">About</li>
+          <li class="navbar__menu__item">Skils</li>
+          <li class="navbar__menu__item">My Work</li>
+          <li class="navbar__menu__item">Testimonials</li>
+          <li class="navbar__menu__item">Contact</li>
+        </ul>
+      </div>
+    </nav>
+    <section id="about"></section>
+    <section id="skils"></section>
+    <section id="mywork"></section>
+    <section id="testimonials"></section>
+    <sectoins id="contract"></sectoins>
+  </body>
 </html>
