--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
         </ul>
       </div>
     </nav>
+    <!-- Home -->
+    <section id="home">
+      <img src="imgs/proflie.jpeg" alt="" class="home__avater" />
+      <h1 class="home__title">Hello, I'm Juseok</h1>
+      <h2 class="home_description">Badass Guy</h2>
+      <button class="home__contact">Contact me</button>
+    </section>
+
+    <!-- About page -->
     <section id="about"></section>
     <section id="skils"></section>
     <section id="mywork"></section>
