--- a/index.html
+++ b/index.html
@@ -45,8 +45,78 @@
     </section>
 
     <!-- About page -->
-    <section id="about"></section>
-    <section id="skils"></section>
+    <section id="about">
+      <h1>About</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita
+        delectus sed aliquam aperiam odit voluptatum enim corrupti, deserunt,
+        error inventore harum doloremque quibusdam ea. Eveniet, doloribus quis.
+        Ea, non quod!
+      </p>
+      <div class="about__major">
+        <div class="major"></div>
+        <div class="major_icon"></div>
+        <div class="major_title"></div>
+        <div class="major_descriptin"></div>
+      </div>
+      <div class="about__job">
+        <div class="job">
+          <img src="" alt="" class="job__logo" />
+          <p class="job__title"></p>
+          <p class="job__period"></p>
+        </div>
+      </div>
+    </section>
+    <!-- Skills -->
+    <section id="skils">
+      <h1>Skils</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita
+        delectus sed aliquam aperiam odit voluptatum enim corrupti, deserunt,
+        error inventore harum doloremque quibusdam ea. Eveniet, doloribus quis.
+        Ea, non quod!
+      </p>
+      <div class="skillset">
+        <div class="skillset__left">
+          <h3 class="skillset__title"></h3>
+          <div class="skill">
+            <div class="skill__description">
+              <span>HTML</span>
+              <span>90%</span>
+            </div>
+            <div class="skill__bar">
+              <div class="skill__value" style='width'></div>
+            </div>
+          </div>
+          <div class="skill">
+            <div class="skill__description">
+              <span>CSS</span>
+              <span>90%</span>
+            </div>
+            <div class="skill__bar">
+              <div class="skill__value" style='width'></div>
+            </div>
+          </div>
+        </div>
+        <div class="skillset__right">
+          <div class="tools">
+            <h3 class="skillset__title">Tools</h3>
+            <ul class="tools__list">
+              <li><span>Visual Studio Code</span></li>
+              <li><span>Sublime Text</span></li>
+            </ul>
+          </div>
+          <div class="etc">
+            <h3 class="skillset__title">Etc</h3>
+            <ul class="etc__list">
+              <ul><span>Artist</span></ul>
+              <ul><span>Innovator</span></ul>
+            </ul>
+          </div>
+        </div>
+      </div>
+      </div>
+    </section>
     <section id="mywork"></section>
     <section id="testimonials"></section>
     <sectoins id="contract"></sectoins>
