--- a/index.html
+++ b/index.html
@@ -117,7 +117,28 @@
       </div>
       </div>
     </section>
-    <section id="mywork"></section>
+    <!-- My Work  -->
+    <section id="mywork">
+      <h1>My Wokr</h1>
+      <h3>Projects</h3>
+      <div class="work__catagories">
+        <button class="catagory"> All Projects <span class="catagory__count">8</span></button>
+        <button class="catagory"> Art Projects <span class="catagory__count">2</span></button>
+        <button class="catagory"> Social Projects <span class="catagory__count">3</span></button>
+        <button class="catagory"> Other Projects <span class="catagory__count">3</span></button>
+      </div>
+      <div class="work__projects">
+        <a  href="" 
+            class="project__img" 
+            target='blank'>
+          <img src="/imgs/projects/" alt="blalala">
+          <div class="project__description">
+            <h3>title</h3>
+            <span>aasdfasdf</span>
+          </div>
+        </a>
+      </div>
+    </section>
     <section id="testimonials"></section>
     <sectoins id="contract"></sectoins>
   </body>
