--- a/index.html
+++ b/index.html
@@ -139,7 +139,24 @@
         </a>
       </div>
     </section>
-    <section id="testimonials"></section>
+    <!-- Testimonials -->
+    <section id="testimonials">
+      <h1>Testimonials</h1>
+      <h3>See what they say about me</h3>
+      <div class="testimonials">
+        <div class="testimonial">
+          <img 
+            src="/imgs/testimonial/" 
+            alt="People"
+            class="testimonial__avatar">
+          <div class="testimonial__speech-bubble">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut voluptatum provident hic commodi reprehenderit dolorum illo, voluptas possimus obcaecati labore accusamus iure iusto, asperiores, sint minima tempore dolorem mollitia? Veniam.</p>
+            <p class="name"><a href="">Name</a></p>
+          </div>
+
+        </div>
+      </div>
+    </section>
     <sectoins id="contract"></sectoins>
   </body>
 </html>
