--- a/index.html
+++ b/index.html
@@ -157,6 +157,14 @@
         </div>
       </div>
     </section>
-    <sectoins id="contract"></sectoins>
+    <!-- Contact -->
+    <sectoins id="contact">
+      <h1 class="contact__title">CONTACT</h1>
+      <h3 class="contact__email">juseok3085@2woo.net</h3>
+      <div class="contact__links">
+        <!-- put the links that you want to -->
+      </div>
+      <p class="contact__rights">2020 Juseok Cha Portfolio All rights reserved</p>
+    </sectoins>
   </body>
 </html>
