--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="this is owned by world best coder juseok"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="imgs/Untitled-2.png" />
     <meta name="author" content="juseok" />
     <script
@@ -20,14 +21,14 @@
   </head>
   <body>
     <!-- Navigation bar -->
-    <nav id="nav bar">
+    <nav id="navbar">
       <div class="navbar__logo">
         <i class="logo"></i>
-        <a href="#">JUSEOK</a>
+        <a href="index.html">JUSEOK</a>
       </div>
       <div class="">
         <ul class="navbar__menu">
-          <li class="navbar__menu__item">Home</li>
+          <li class="navbar__menu__item active">Home</li>
           <li class="navbar__menu__item">About</li>
           <li class="navbar__menu__item">Skils</li>
           <li class="navbar__menu__item">My Work</li>
