--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <!-- Navigation bar -->
-    <nav id="navbar">
+    <nav id="navbar" class="section">
       <div class="navbar__logo">
         <i class="logo"></i>
         <a href="index.html">JUSEOK</a>
@@ -39,14 +39,14 @@
     </nav>
     <!-- Home -->
     <section id="home">
-      <img src="imgs/proflie.jpeg" alt="" class="home__avater" />
+      <img src="imgs/export.jpg" alt="" class="home__avater" />
       <h1 class="home__title">Hello, I'm Juseok</h1>
-      <h2 class="home_description">Badass Guy</h2>
+      <h2 class="home_description">Creative Innovator</h2>
       <button class="home__contact">Contact me</button>
     </section>
 
     <!-- About page -->
-    <section id="about">
+    <section id="about" class="section">
       <h1>About</h1>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita
@@ -69,7 +69,7 @@
       </div>
     </section>
     <!-- Skills -->
-    <section id="skils">
+    <section id="skils" class="section">
       <h1>Skils</h1>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita
@@ -119,7 +119,7 @@
       </div>
     </section>
     <!-- My Work  -->
-    <section id="mywork">
+    <section id="mywork" class="section">
       <h1>My Wokr</h1>
       <h3>Projects</h3>
       <div class="work__catagories">
@@ -141,7 +141,7 @@
       </div>
     </section>
     <!-- Testimonials -->
-    <section id="testimonials">
+    <section id="testimonials" class="section">
       <h1>Testimonials</h1>
       <h3>See what they say about me</h3>
       <div class="testimonials">
@@ -159,7 +159,7 @@
       </div>
     </section>
     <!-- Contact -->
-    <sectoins id="contact">
+    <sectoins id="contact" class="section">
       <h1 class="contact__title">CONTACT</h1>
       <h3 class="contact__email">juseok3085@2woo.net</h3>
       <div class="contact__links">
