--- a/index.html
+++ b/index.html
@@ -1,171 +1,171 @@
 <!-- def -->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JUSEOK'S PORTPOLIO</title>
-    <meta
-      name="description"
-      content="this is owned by world best coder juseok"
-    />
-    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="imgs/Untitled-2.png" />
-    <meta name="author" content="juseok" />
-    <script
-      src="https://kit.fontawesome.com/76f3d3286d.js"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="style.css" />
-    <style src="main.js" difer></style>
-  </head>
-  <body>
-    <!-- Navigation bar -->
-    <nav id="navbar" class="section">
-      <div class="navbar__logo">
-        <i class="logo"></i>
-        <a href="index.html">JUSEOK</a>
-      </div>
-      <div class="">
-        <ul class="navbar__menu">
-          <li class="navbar__menu__item active">Home</li>
-          <li class="navbar__menu__item">About</li>
-          <li class="navbar__menu__item">Skils</li>
-          <li class="navbar__menu__item">My Work</li>
-          <li class="navbar__menu__item">Testimonials</li>
-          <li class="navbar__menu__item">Contact</li>
-        </ul>
-      </div>
-    </nav>
-    <!-- Home -->
-    <section id="home">
-      <img src="imgs/export.jpg" alt="" class="home__avater" />
-      <h1 class="home__title">Hello, I'm Juseok</h1>
-      <h2 class="home_description">Creative Innovator</h2>
-      <button class="home__contact">Contact me</button>
-    </section>
 
-    <!-- About page -->
-    <section id="about" class="section">
-      <h1>About</h1>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita
-        delectus sed aliquam aperiam odit voluptatum enim corrupti, deserunt,
-        error inventore harum doloremque quibusdam ea. Eveniet, doloribus quis.
-        Ea, non quod!
-      </p>
-      <div class="about__major">
-        <div class="major"></div>
-        <div class="major_icon"></div>
-        <div class="major_title"></div>
-        <div class="major_descriptin"></div>
-      </div>
-      <div class="about__job">
-        <div class="job">
-          <img src="" alt="" class="job__logo" />
-          <p class="job__title"></p>
-          <p class="job__period"></p>
-        </div>
-      </div>
-    </section>
-    <!-- Skills -->
-    <section id="skils" class="section">
-      <h1>Skils</h1>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita
-        delectus sed aliquam aperiam odit voluptatum enim corrupti, deserunt,
-        error inventore harum doloremque quibusdam ea. Eveniet, doloribus quis.
-        Ea, non quod!
-      </p>
-      <div class="skillset">
-        <div class="skillset__left">
-          <h3 class="skillset__title"></h3>
-          <div class="skill">
-            <div class="skill__description">
-              <span>HTML</span>
-              <span>90%</span>
-            </div>
-            <div class="skill__bar">
-              <div class="skill__value" style='width'></div>
-            </div>
-          </div>
-          <div class="skill">
-            <div class="skill__description">
-              <span>CSS</span>
-              <span>90%</span>
-            </div>
-            <div class="skill__bar">
-              <div class="skill__value" style='width'></div>
-            </div>
-          </div>
-        </div>
-        <div class="skillset__right">
-          <div class="tools">
-            <h3 class="skillset__title">Tools</h3>
-            <ul class="tools__list">
-              <li><span>Visual Studio Code</span></li>
-              <li><span>Sublime Text</span></li>
-            </ul>
-          </div>
-          <div class="etc">
-            <h3 class="skillset__title">Etc</h3>
-            <ul class="etc__list">
-              <ul><span>Artist</span></ul>
-              <ul><span>Innovator</span></ul>
-            </ul>
-          </div>
-        </div>
-      </div>
-      </div>
-    </section>
-    <!-- My Work  -->
-    <section id="mywork" class="section">
-      <h1>My Wokr</h1>
-      <h3>Projects</h3>
-      <div class="work__catagories">
-        <button class="catagory"> All Projects <span class="catagory__count">8</span></button>
-        <button class="catagory"> Art Projects <span class="catagory__count">2</span></button>
-        <button class="catagory"> Social Projects <span class="catagory__count">3</span></button>
-        <button class="catagory"> Other Projects <span class="catagory__count">3</span></button>
-      </div>
-      <div class="work__projects">
-        <a  href="" 
-            class="project__img" 
-            target='blank'>
-          <img src="/imgs/projects/" alt="blalala">
-          <div class="project__description">
-            <h3>title</h3>
-            <span>aasdfasdf</span>
-          </div>
-        </a>
-      </div>
-    </section>
-    <!-- Testimonials -->
-    <section id="testimonials" class="section">
-      <h1>Testimonials</h1>
-      <h3>See what they say about me</h3>
-      <div class="testimonials">
-        <div class="testimonial">
-          <img 
-            src="/imgs/testimonial/" 
-            alt="People"
-            class="testimonial__avatar">
-          <div class="testimonial__speech-bubble">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut voluptatum provident hic commodi reprehenderit dolorum illo, voluptas possimus obcaecati labore accusamus iure iusto, asperiores, sint minima tempore dolorem mollitia? Veniam.</p>
-            <p class="name"><a href="">Name</a></p>
-          </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>JUSEOK'S PORTPOLIO</title>
+  <meta name="description" content="this is owned by world best coder juseok" />
+  <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/png" href="imgs/Untitled-2.png" />
+  <meta name="author" content="juseok" />
+  <script src="https://kit.fontawesome.com/76f3d3286d.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="style.css" />
+  <style src="main.js" difer></style>
+</head>
 
+<body>
+  <!-- Navigation bar -->
+  <nav id="navbar" class="section">
+    <div class="navbar__logo">
+      <i class="logo"></i>
+      <a href="index.html">JUSEOK</a>
+    </div>
+    <div class="">
+      <ul class="navbar__menu">
+        <li class="navbar__menu__item active">Home</li>
+        <li class="navbar__menu__item">About</li>
+        <li class="navbar__menu__item">Skils</li>
+        <li class="navbar__menu__item">My Work</li>
+        <li class="navbar__menu__item">Testimonials</li>
+        <li class="navbar__menu__item">Contact</li>
+      </ul>
+    </div>
+  </nav>
+  <!-- Home -->
+  <section id="home">
+    <img src="imgs/export.jpg" alt="" class="home__avater" />
+    <h1 class="home__title">Hello, I'm Juseok</h1>
+    <h2 class="home_description">Creative Innovator</h2>
+    <button class="home__contact">Contact me</button>
+  </section>
+
+  <!-- About page -->
+  <section id="about" class="section">
+    <h1>About</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita
+      delectus sed aliquam aperiam odit voluptatum enim corrupti, deserunt,
+      error inventore harum doloremque quibusdam ea. Eveniet, doloribus quis.
+      Ea, non quod!
+    </p>
+    <div class="about__major">
+      <div class="major">
+        <div class="major__icon">
+          <i class='fab fa-html5'></i>
+        </div>
+        <h2 class="major_title">Font-end</h2>
+        <div class="major_descriptin">
+          HTML, CSS, JAVASCIRPT
         </div>
       </div>
-    </section>
-    <!-- Contact -->
-    <sectoins id="contact" class="section">
-      <h1 class="contact__title">CONTACT</h1>
-      <h3 class="contact__email">juseok3085@2woo.net</h3>
-      <div class="contact__links">
-        <!-- put the links that you want to -->
+
+    </div>
+    <!-- <div class="about__job">
+      <div class="job">
+        <img src="" alt="" class="job__logo" />
+        <p class="job__title"></p>
+        <p class="job__period"></p>
       </div>
-      <p class="contact__rights">2020 Juseok Cha Portfolio All rights reserved</p>
-    </sectoins>
-  </body>
+    </div> -->
+  </section>
+  <!-- Skills -->
+  <section id="skils" class="section">
+    <h1>Skils</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita
+      delectus sed aliquam aperiam odit voluptatum enim corrupti, deserunt,
+      error inventore harum doloremque quibusdam ea. Eveniet, doloribus quis.
+      Ea, non quod!
+    </p>
+    <div class="skillset">
+      <div class="skillset__left">
+        <h3 class="skillset__title"></h3>
+        <div class="skill">
+          <div class="skill__description">
+            <span>HTML</span>
+            <span>90%</span>
+          </div>
+          <div class="skill__bar">
+            <div class="skill__value" style='width'></div>
+          </div>
+        </div>
+        <div class="skill">
+          <div class="skill__description">
+            <span>CSS</span>
+            <span>90%</span>
+          </div>
+          <div class="skill__bar">
+            <div class="skill__value" style='width'></div>
+          </div>
+        </div>
+      </div>
+      <div class="skillset__right">
+        <div class="tools">
+          <h3 class="skillset__title">Tools</h3>
+          <ul class="tools__list">
+            <li><span>Visual Studio Code</span></li>
+            <li><span>Sublime Text</span></li>
+          </ul>
+        </div>
+        <div class="etc">
+          <h3 class="skillset__title">Etc</h3>
+          <ul class="etc__list">
+            <ul><span>Artist</span></ul>
+            <ul><span>Innovator</span></ul>
+          </ul>
+        </div>
+      </div>
+    </div>
+    </div>
+  </section>
+  <!-- My Work  -->
+  <section id="mywork" class="section">
+    <h1>My Wokr</h1>
+    <h3>Projects</h3>
+    <div class="work__catagories">
+      <button class="catagory"> All Projects <span class="catagory__count">8</span></button>
+      <button class="catagory"> Art Projects <span class="catagory__count">2</span></button>
+      <button class="catagory"> Social Projects <span class="catagory__count">3</span></button>
+      <button class="catagory"> Other Projects <span class="catagory__count">3</span></button>
+    </div>
+    <div class="work__projects">
+      <a href="" class="project__img" target='blank'>
+        <img src="/imgs/projects/" alt="blalala">
+        <div class="project__description">
+          <h3>title</h3>
+          <span>aasdfasdf</span>
+        </div>
+      </a>
+    </div>
+  </section>
+  <!-- Testimonials -->
+  <section id="testimonials" class="section">
+    <h1>Testimonials</h1>
+    <h3>See what they say about me</h3>
+    <div class="testimonials">
+      <div class="testimonial">
+        <img src="/imgs/testimonial/" alt="People" class="testimonial__avatar">
+        <div class="testimonial__speech-bubble">
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut voluptatum provident hic commodi reprehenderit
+            dolorum illo, voluptas possimus obcaecati labore accusamus iure iusto, asperiores, sint minima tempore
+            dolorem mollitia? Veniam.</p>
+          <p class="name"><a href="">Name</a></p>
+        </div>
+
+      </div>
+    </div>
+  </section>
+  <!-- Contact -->
+  <sectoins id="contact" class="section">
+    <h1 class="contact__title">CONTACT</h1>
+    <h3 class="contact__email">juseok3085@2woo.net</h3>
+    <div class="contact__links">
+      <!-- put the links that you want to -->
+    </div>
+    <p class="contact__rights">2020 Juseok Cha Portfolio All rights reserved</p>
+  </sectoins>
+</body>
+
 </html>
