--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
     <h2 class="home_description">Creative Innovator</h2>
     <button class="home__contact">Contact me</button>
   </section>
-
   <!-- About page -->
-  <section id="about" class="section">
+  <section id="about" class="section section_container">
     <h1>About</h1>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita
@@ -63,61 +62,62 @@
 
     </div>
     <!-- <div class="about__job">
-      <div class="job">
-        <img src="" alt="" class="job__logo" />
-        <p class="job__title"></p>
-        <p class="job__period"></p>
-      </div>
-    </div> -->
+        <div class="job">
+          <img src="" alt="" class="job__logo" />
+          <p class="job__title"></p>
+          <p class="job__period"></p>
+        </div>
+      </div> -->
   </section>
   <!-- Skills -->
   <section id="skils" class="section">
-    <h1>Skils</h1>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita
-      delectus sed aliquam aperiam odit voluptatum enim corrupti, deserunt,
-      error inventore harum doloremque quibusdam ea. Eveniet, doloribus quis.
-      Ea, non quod!
-    </p>
-    <div class="skillset">
-      <div class="skillset__left">
-        <h3 class="skillset__title"></h3>
-        <div class="skill">
-          <div class="skill__description">
-            <span>HTML</span>
-            <span>90%</span>
+    <div class="section__container">
+      <h1>Skils</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita
+        delectus sed aliquam aperiam odit voluptatum enim corrupti, deserunt,
+        error inventore harum doloremque quibusdam ea. Eveniet, doloribus quis.
+        Ea, non quod!
+      </p>
+      <div class="skillset">
+        <div class="skillset__left">
+          <h3 class="skillset__title">LANG</h3>
+          <div class="skill">
+            <div class="skill__description">
+              <span>HTML</span>
+              <span>90%</span>
+            </div>
+            <div class="skill__bar">
+              <div class="skill__value" style='width: 50%;'></div>
+            </div>
           </div>
-          <div class="skill__bar">
-            <div class="skill__value" style='width'></div>
+          <div class="skill">
+            <div class="skill__description">
+              <span>CSS</span>
+              <span>90%</span>
+            </div>
+            <div class="skill__bar">
+              <div class="skill__value" style='width: 90%;'></div>
+            </div>
           </div>
         </div>
-        <div class="skill">
-          <div class="skill__description">
-            <span>CSS</span>
-            <span>90%</span>
+        <div class="skillset__right">
+          <div class="tools">
+            <h3 class="skillset__title">Tools</h3>
+            <ul class="tools__list">
+              <li><span>Visual Studio Code</span></li>
+              <li><span>Sublime Text</span></li>
+            </ul>
           </div>
-          <div class="skill__bar">
-            <div class="skill__value" style='width'></div>
+          <div class="etc">
+            <h3 class="skillset__title">Etc</h3>
+            <ul class="etc__list">
+              <ul><span>Artist</span></ul>
+              <ul><span>Innovator</span></ul>
+            </ul>
           </div>
         </div>
       </div>
-      <div class="skillset__right">
-        <div class="tools">
-          <h3 class="skillset__title">Tools</h3>
-          <ul class="tools__list">
-            <li><span>Visual Studio Code</span></li>
-            <li><span>Sublime Text</span></li>
-          </ul>
-        </div>
-        <div class="etc">
-          <h3 class="skillset__title">Etc</h3>
-          <ul class="etc__list">
-            <ul><span>Artist</span></ul>
-            <ul><span>Innovator</span></ul>
-          </ul>
-        </div>
-      </div>
-    </div>
     </div>
   </section>
   <!-- My Work  -->
