--- a/index.html
+++ b/index.html
@@ -125,14 +125,21 @@
     <h1>My Wokr</h1>
     <h3>Projects</h3>
     <div class="work__catagories">
-      <button class="catagory"> All Projects <span class="catagory__count">8</span></button>
-      <button class="catagory"> Art Projects <span class="catagory__count">2</span></button>
-      <button class="catagory"> Social Projects <span class="catagory__count">3</span></button>
-      <button class="catagory"> Other Projects <span class="catagory__count">3</span></button>
+      <button class="catagory__btn active"> All Projects <span class="catagory__count">8</span></button>
+      <button class="catagory__btn"> Art Projects <span class="catagory__count">2</span></button>
+      <button class="catagory__btn"> Social Projects <span class="catagory__count">3</span></button>
+      <button class="catagory__btn"> Other Projects <span class="catagory__count">3</span></button>
     </div>
     <div class="work__projects">
-      <a href="" class="project__img" target='blank'>
-        <img src="/imgs/projects/" alt="blalala">
+      <a href="" class="project" target='blank'>
+        <img src="/imgs/projects/p2.JPG" alt="blalala" class="project__img">
+        <div class="project__description">
+          <h3>title</h3>
+          <span>aasdfasdf</span>
+        </div>
+      </a>
+      <a href="" class="project" target='blank'>
+        <img src="/imgs/projects/p1.JPG" alt="blalala" class="project__img">
         <div class="project__description">
           <h3>title</h3>
           <span>aasdfasdf</span>
