--- a/index.html
+++ b/index.html
@@ -165,11 +165,13 @@
     </div>
   </section>
   <!-- Contact -->
-  <sectoins id="contact" class="section">
+  <sectoins id="contact" class="section" style="width: 100%;">
     <h1 class="contact__title">CONTACT</h1>
     <h3 class="contact__email">juseok3085@2woo.net</h3>
     <div class="contact__links">
-      <!-- put the links that you want to -->
+      <a href="#">
+        <i class="fa fa-github"></i>
+      </a>
     </div>
     <p class="contact__rights">2020 Juseok Cha Portfolio All rights reserved</p>
   </sectoins>
