--- a/index.html
+++ b/index.html
@@ -31,14 +31,20 @@
         <li class="navbar__menu__item">Testimonials</li>
         <li class="navbar__menu__item">Contact</li>
       </ul>
+      <!-- Toggle button -->
+      <button class="navbar__toggle-btn">
+        <i class="fas fa-bars"></i>
+      </button>
     </div>
   </nav>
   <!-- Home -->
   <section id="home">
-    <img src="imgs/export.jpg" alt="" class="home__avater" />
-    <h1 class="home__title">Hello, I'm Juseok</h1>
-    <h2 class="home_description">Creative Innovator</h2>
-    <button class="home__contact">Contact me</button>
+    <div class="home__container">
+      <img src="imgs/export.jpg" alt="Juseok's profile photo" class="home__avater" />
+      <h1 class="home__title">Hello, <br />I'm Juseok</h1>
+      <h2 class="home_description">Creative Romentist</h2>
+      <button class="home__contact">Contact me</button>
+    </div>
   </section>
   <!-- About page -->
   <section id="about" class="section section_container">
@@ -56,18 +62,50 @@
         </div>
         <h2 class="major_title">Font-end</h2>
         <div class="major_descriptin">
-          HTML, CSS, JAVASCIRPT
+          HTML, CSS, JAVASCIRPT, TypeScript
+          <br /> React, Vue, Web APIs
         </div>
       </div>
-
-    </div>
-    <!-- <div class="about__job">
-        <div class="job">
-          <img src="" alt="" class="job__logo" />
-          <p class="job__title"></p>
-          <p class="job__period"></p>
+      <div class="major">
+        <div class="major__icon">
+          <i class="fas fa-mobile"></i>
         </div>
-      </div> -->
+        <h2 class="major__title">Mobile</h2>
+        <p class="major__description">
+          Android, iOS, React Native, Flutter,
+          <br />Java, Swift, Kotlin
+        </p>
+      </div>
+      <div class="major">
+        <div class="major__icon">
+          <i class="fas fa-server"></i>
+        </div>
+        <h2 class="major__title">Back-end</h2>
+        <p class="major__description">
+          Java, JavaScript, Go, NodeJS,
+          <br />Rest APIs, GraphGL
+        </p>
+      </div>
+    </div>
+    <div class="about__job">
+      <div class="job">
+        <img src="imgs/jobs/logo-samsung" alt="samsung" class="job__logo" />
+        <div class="job__description">
+          <p class="job__name">
+            Currently working at Samsung as Softwarre Engineer
+          </p>
+          <p class="job__period">2019 Sept - Until now</p>
+        </div>
+        <div class="job">
+          <img src="imgs/jobs/logo-samsung" alt="samsung" class="job__logo" />
+          <div class="job__description">
+            <p class="job__name">
+              Currently working at Samsung as Softwarre Engineer
+            </p>
+            <p class="job__period">2019 Sept - Until now</p>
+          </div>
+        </div>
+      </div>
   </section>
   <!-- Skills -->
   <section id="skils" class="section">
@@ -81,7 +119,7 @@
       </p>
       <div class="skillset">
         <div class="skillset__left">
-          <h3 class="skillset__title">LANG</h3>
+          <h3 class="skillset__title">Skills</h3>
           <div class="skill">
             <div class="skill__description">
               <span>HTML</span>
@@ -100,6 +138,42 @@
               <div class="skill__value" style='width: 90%;'></div>
             </div>
           </div>
+          <div class="skill">
+            <div class="skill__description">
+              <span>JavaScript</span>
+              <span>90%</span>
+            </div>
+            <div class="skill__bar">
+              <div class="skill__value" style="width: 90%;"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <div class="skill__description">
+              <span>TypeScript</span>
+              <span>80%</span>
+            </div>
+            <div class="skill__bar">
+              <div class="skill__value" style="width: 80%;"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <div class="skill__description">
+              <span>React</span>
+              <span>88%</span>
+            </div>
+            <div class="skill__bar">
+              <div class="skill__value" style="width: 88%;"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <div class="skill__description">
+              <span>NodeJS</span>
+              <span>77%</span>
+            </div>
+            <div class="skill__bar">
+              <div class="skill__value" style="width: 77%;"></div>
+            </div>
+          </div>
         </div>
         <div class="skillset__right">
           <div class="tools">
@@ -107,69 +181,135 @@
             <ul class="tools__list">
               <li><span>Visual Studio Code</span></li>
               <li><span>Sublime Text</span></li>
+              <li><span>IntelliJ</span></li>
+              <li><span>Android Studio Code</span></li>
+              <li><span>iOS development tools</span></li>
+              <li><span>Sketch app</span></li>
             </ul>
           </div>
           <div class="etc">
             <h3 class="skillset__title">Etc</h3>
             <ul class="etc__list">
-              <ul><span>Artist</span></ul>
-              <ul><span>Innovator</span></ul>
+              <ul><span>Git</span></ul>
+              <ul><span>Scrum master</span></ul>
+              <ul><span>Math</span></ul>
             </ul>
           </div>
         </div>
       </div>
     </div>
   </section>
-  <!-- My Work  -->
+  <!-- Work  -->
   <section id="mywork" class="section">
-    <h1>My Wokr</h1>
-    <h3>Projects</h3>
-    <div class="work__catagories">
-      <button class="catagory__btn active"> All Projects <span class="catagory__count">8</span></button>
-      <button class="catagory__btn"> Art Projects <span class="catagory__count">2</span></button>
-      <button class="catagory__btn"> Social Projects <span class="catagory__count">3</span></button>
-      <button class="catagory__btn"> Other Projects <span class="catagory__count">3</span></button>
-    </div>
-    <div class="work__projects">
-      <a href="" class="project" target='blank'>
-        <img src="/imgs/projects/p2.JPG" alt="blalala" class="project__img">
-        <div class="project__description">
-          <h3>title</h3>
-          <span>aasdfasdf</span>
-        </div>
-      </a>
-      <a href="" class="project" target='blank'>
-        <img src="/imgs/projects/p1.JPG" alt="blalala" class="project__img">
-        <div class="project__description">
-          <h3>title</h3>
-          <span>aasdfasdf</span>
-        </div>
-      </a>
+    <div class="section__container">
+      <h1>My Work</h1>
+      <h3>Projects</h3>
+
+      <div class="work__catagories">
+        <button class="catagory__btn active"> All <span class="catagory__count">8</span></button>
+        <button class="catagory__btn"> Front-end <span class="catagory__count">2</span></button>
+        <button class="catagory__btn"> Back-end <span class="catagory__count">3</span></button>
+        <button class="catagory__btn"> Mobiele <span class="catagory__count">3</span></button>
+      </div>
+      <div class="work__projects">
+        <a href="" class="project" target="blank" data-type="front-end">
+          <img src="imgs/projects/youtube.png" alt="Youtube" class="project__img" />
+          <div class="project__description">
+            <h3>Youtube Site</h3>
+            <span>Clone coding with HTML, CSS</span>
+          </div>
+        </a>
+        <a href="https://github.com/dream-ellie/responsive-nav-bar" class="project" data-type="front-end"
+          target="blank">
+          <img class="project__img" src="imgs/projects/navbar.png" alt="navbar" />
+          <div class="project__description">
+            <h3>Responsive Navbar</h3>
+            <span>HTML, CSS with media query</span>
+          </div>
+        </a>
+        <a href="https://github.com/dream-ellie/responsive-nav-bar" class="project" data-type="front-end"
+          target="blank">
+          <img class="project__img" src="imgs/projects/game.png" alt="navbar" />
+          <div class="project__description">
+            <h3>Shopping mall game</h3>
+            <span>HTML, CSS, JavaScript, Json</span>
+          </div>
+        </a>
+        <a href="" class="project" data-type="back-end">
+          <img class="project__img" src="imgs/projects/game.png" alt="" />
+          <div class="project__description">
+            <h3>Project</h3>
+            <span>Explanation</span>
+          </div>
+        </a>
+        <a href="" class="project" data-type="back-end">
+          <img class="project__img" src="imgs/projects/game.png" alt="" />
+          <div class="project__description">
+            <h3>Project</h3>
+            <span>Explanation</span>
+          </div>
+        </a>
+        <a href="" class="project" data-type="mobile">
+          <img class="project__img" src="imgs/projects/game.png" alt="" />
+          <div class="project__description">
+            <h3>Project</h3>
+            <span>Explanation</span>
+          </div>
+        </a>
+        <a href="" class="project" data-type="mobile">
+          <img class="project__img" src="imgs/projects/game.png" alt="" />
+          <div class="project__description">
+            <h3>Project</h3>
+            <span>Explanation</span>
+          </div>
+        </a>
+        <a href="" class="project" data-type="mobile">
+          <img class="project__img" src="imgs/projects/game.png" alt="" />
+          <div class="project__description">
+            <h3>Project</h3>
+            <span>Explanation</span>
+          </div>
+        </a>
+      </div>
     </div>
   </section>
   <!-- Testimonials -->
   <section id="testimonials" class="section">
-    <h1>Testimonials</h1>
-    <h3>See what they say about me</h3>
-    <div class="testimonials">
-      <div class="testimonial">
-        <img src="/imgs/testimonial/" alt="People" class="testimonial__avatar">
-        <div class="testimonial__speech-bubble">
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut voluptatum provident hic commodi reprehenderit
-            dolorum illo, voluptas possimus obcaecati labore accusamus iure iusto, asperiores, sint minima tempore
-            dolorem mollitia? Veniam.</p>
-          <p class="name"><a href="">Name</a></p>
+    <div class="section__container">
+      <h1>Testimonials</h1>
+      <h3>See what they say about me</h3>
+      <div class="testimonials">
+        <div class="testimonial">
+          <img src="/imgs/testimonial/" alt="People" class="testimonial__avatar">
+          <div class="testimonial__speech-bubble">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut voluptatum provident hic commodi
+              reprehenderit
+              dolorum illo, voluptas possimus obcaecati labore accusamus iure iusto, asperiores, sint minima tempore
+              dolorem mollitia? Veniam.</p>
+            <p class="name"><a href="">Name</a></p>
+          </div>
+          <div class="testimonial">
+            <img src="/imgs/testimonial/" alt="People" class="testimonial__avatar">
+            <div class="testimonial__speech-bubble">
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut voluptatum provident hic commodi
+                reprehenderit
+                dolorum illo, voluptas possimus obcaecati labore accusamus iure iusto, asperiores, sint minima tempore
+                dolorem mollitia? Veniam.</p>
+              <p class="name"><a href="">Name</a></p>
+            </div>
+          </div>
+          <img src="imgs/testimonial/people1.jpg" alt="People" class="testimonial__avatar" />
         </div>
-
       </div>
     </div>
+
   </section>
   <!-- Contact -->
   <sectoins id="contact" class="section" style="width: 100%;">
     <h1 class="contact__title">CONTACT</h1>
     <h3 class="contact__email">juseok3085@2woo.net</h3>
     <div class="contact__links">
-      <a href="#">
+      <a href="">
         <i class="fa fa-github"></i>
       </a>
     </div>
