--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </nav>
 
   <!-- Home -->
-  <section id="home">
+  <section id="home" data-link="#home">
     <div class="home__container">
       <img src="imgs/profile.jpg" alt="Ellie's profile photo" class="home__avatar" />
       <h1 class="home__title">Hello, <br />I'm Dream Coder</h1>
